SERVER-26471 Always incrementally refresh metadata after committing chunk migration

Also introduces a failpoint and js test to exercise the race condition.