src/mongo/db/s/migration_source_manager.cpp
@@ -74,7 +74,6 @@ const WriteConcernOptions kMajorityWriteConcern(WriteConcernOptions::kMajority,
 
 MONGO_FP_DECLARE(migrationCommitNetworkError);
 MONGO_FP_DECLARE(failMigrationCommit);
-MONGO_FP_DECLARE(hangBeforeCommitMigration);
 MONGO_FP_DECLARE(hangBeforeLeavingCriticalSection);
 
 MigrationSourceManager::MigrationSourceManager(OperationContext* txn, MoveChunkRequest request)
@@ -264,8 +263,7 @@ Status MigrationSourceManager::enterCriticalSection(OperationContext* txn) {
                                      : "collection unsharded.")};
         }
 
-        // IMPORTANT: After this line, the critical section is in place and needs to be rolled back
-        // if anything fails, which would prevent commit to the config servers.
+        // IMPORTANT: After this line, the critical section is in place and needs to be signaled
         _critSecSignal = std::make_shared<Notification<void>>();
     }
 
@@ -276,7 +274,7 @@ Status MigrationSourceManager::enterCriticalSection(OperationContext* txn) {
     return Status::OK();
 }
 
-Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
+Status MigrationSourceManager::commitChunkOnRecipient(OperationContext* txn) {
     invariant(!txn->lockState()->isLocked());
     invariant(_state == kCriticalSection);
     auto scopedGuard = MakeGuard([&] { cleanupOnError(txn); });
@@ -293,6 +291,16 @@ Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
         return {commitCloneStatus.code(),
                 str::stream() << "commit clone failed due to " << commitCloneStatus.toString()};
     }
+
+    _state = kCloneCompleted;
+    scopedGuard.Dismiss();
+    return Status::OK();
+}
+
+Status MigrationSourceManager::commitChunkMetadataOnConfig(OperationContext* txn) {
+    invariant(!txn->lockState()->isLocked());
+    invariant(_state == kCloneCompleted);
+    auto scopedGuard = MakeGuard([&] { cleanupOnError(txn); });
 
     ChunkType migratedChunkType;
     migratedChunkType.setMin(_args.getMinKey());
@@ -323,8 +331,6 @@ Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
 
     builder.append(kWriteConcernField, kMajorityWriteConcern.toBSON());
 
-    MONGO_FAIL_POINT_PAUSE_WHILE_SET(hangBeforeCommitMigration);
-
     auto commitChunkMigrationResponse =
         grid.shardRegistry()->getConfigShard()->runCommandWithFixedRetryAttempts(
             txn,
@@ -342,49 +348,14 @@ Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
         (commitChunkMigrationResponse.isOK() ? commitChunkMigrationResponse.getValue().commandStatus
                                              : commitChunkMigrationResponse.getStatus());
 
-    if (migrationCommitStatus.isOK()) {
-        // Now that _configsvrCommitChunkMigration succeeded and the a collection version is
-        // committed, update the collection metadata to the new collection version in the command
-        // response and forget the migrated chunk.
-
-        ChunkVersion committedCollVersion;
-        if (controlChunkType) {
-            committedCollVersion = fassertStatusOK(
-                40084,
-                ChunkVersion::parseFromBSONWithFieldForCommands(
-                    commitChunkMigrationResponse.getValue().response, kControlChunkVersionField));
-        } else {
-            committedCollVersion = fassertStatusOK(
-                40083,
-                ChunkVersion::parseFromBSONWithFieldForCommands(
-                    commitChunkMigrationResponse.getValue().response, kMigratedChunkVersionField));
-        }
-
-        ScopedTransaction scopedXact(txn, MODE_IX);
-        AutoGetCollection autoColl(txn, _args.getNss(), MODE_IX, MODE_X);
-
-        ChunkType migratingChunkToForget;
-        migratingChunkToForget.setMin(_args.getMinKey());
-        migratingChunkToForget.setMax(_args.getMaxKey());
-
-        auto css = CollectionShardingState::get(txn, _args.getNss().ns());
-        // It is possible for the collection to have been dropped before we update the metadata
-        // here. However, it is fine to update the metadata anyway because on a new command the
-        // version will be found stale and prompt a metadata refresh from the config server.
-        css->refreshMetadata(
-            txn, _committedMetadata->cloneMigrate(migratingChunkToForget, committedCollVersion));
-        _committedMetadata = css->getMetadata();
-    } else {
-        // This could be an unrelated error (e.g. network error). Check whether the metadata update
-        // succeeded by refreshing the collection metadata from the config server and checking that
-        // the original chunks no longer exist.
-
-        warning() << "Migration metadata commit may have failed: refreshing metadata to check"
-                  << causedBy(migrationCommitStatus);
-
+    if (!migrationCommitStatus.isOK()) {
         // Need to get the latest optime in case the refresh request goes to a secondary --
         // otherwise the read won't wait for the write that _configsvrCommitChunkMigration may have
-        // done.
+        // done
+        warning() << "Error occurred during migration metadata commit. Performing a majority write "
+                     "against the config server to get the latest optime"
+                  << causedBy(redact(migrationCommitStatus));
+
         Status status = grid.catalogClient(txn)->logChange(
             txn,
             "moveChunk.validating",
@@ -394,6 +365,7 @@ Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
                        << "to"
                        << _args.getToShardId()),
             ShardingCatalogClient::kMajorityWriteConcern);
+
         if ((ErrorCodes::isInterruption(status.code()) ||
              ErrorCodes::isShutdownError(status.code()) ||
              status == ErrorCodes::CallbackCanceled) &&
@@ -406,62 +378,59 @@ Status MigrationSourceManager::commitDonateChunk(OperationContext* txn) {
         fassertStatusOK(40137,
                         {status.code(),
                          str::stream()
-                             << "Failed to commit chunk ["
+                             << "Failed to commit migration for chunk "
                              << redact(ChunkRange(_args.getMinKey(), _args.getMaxKey()).toString())
                              << " due to "
-                             << migrationCommitStatus.toString()
-                             << ", and updating the optime with a write before refreshing the "
+                             << redact(migrationCommitStatus)
+                             << ". Updating the optime with a write before refreshing the "
                              << "metadata also failed with "
-                             << status.toString()});
+                             << redact(status)});
+    }
 
-        // Once the write above has succeeded we have an up to date config server optime. In this
-        // case do a best effort attempt to incrementally refresh the metadata. If this fails, just
-        // clear it up so that subsequent requests will try to do a full refresh.
-        ChunkVersion unusedShardVersion;
-        Status refreshStatus =
-            ShardingState::get(txn)->refreshMetadataNow(txn, _args.getNss(), &unusedShardVersion);
+    // Do a best effort attempt to incrementally refresh the metadata. If this fails, just clear it
+    // up so that subsequent requests will try to do a full refresh.
+    ChunkVersion unusedShardVersion;
+    Status refreshStatus =
+        ShardingState::get(txn)->refreshMetadataNow(txn, _args.getNss(), &unusedShardVersion);
 
-        if (refreshStatus.isOK()) {
-            ScopedTransaction scopedXact(txn, MODE_IS);
-            AutoGetCollection autoColl(txn, _args.getNss(), MODE_IS);
+    if (refreshStatus.isOK()) {
+        ScopedTransaction scopedXact(txn, MODE_IS);
+        AutoGetCollection autoColl(txn, _args.getNss(), MODE_IS);
 
-            auto refreshedMetadata =
-                CollectionShardingState::get(txn, _args.getNss())->getMetadata();
+        auto refreshedMetadata = CollectionShardingState::get(txn, _args.getNss())->getMetadata();
 
-            if (!refreshedMetadata) {
-                return {ErrorCodes::NamespaceNotSharded,
-                        str::stream() << "Chunk move failed because collection '"
-                                      << _args.getNss().ns()
-                                      << "' is no longer sharded. The migration commit error was: "
-                                      << migrationCommitStatus.toString()};
-            }
-
-            if (refreshedMetadata->keyBelongsToMe(_args.getMinKey())) {
-                // The chunk modification was not applied, so report the original error
-                return {migrationCommitStatus.code(),
-                        str::stream() << "Chunk move was not successful due to "
-                                      << migrationCommitStatus.reason()};
-            }
-
-            // Migration succeeded
-            _committedMetadata = std::move(refreshedMetadata);
-
-            log() << "moveChunk updated collection '" << _args.getNss().ns()
-                  << "' to collection version '" << _committedMetadata->getCollVersion() << "'.";
-        } else {
-            ScopedTransaction scopedXact(txn, MODE_IX);
-            AutoGetCollection autoColl(txn, _args.getNss(), MODE_IX, MODE_X);
-
-            CollectionShardingState::get(txn, _args.getNss())->refreshMetadata(txn, nullptr);
-
-            log() << "moveChunk failed to refresh metadata for collection '" << _args.getNss().ns()
-                  << "'. Metadata was cleared so it will get a full refresh when accessed again"
-                  << redact(causedBy(refreshStatus));
-
-            return {migrationCommitStatus.code(),
-                    str::stream() << "Failed to refresh metadata after migration commit due to "
-                                  << refreshStatus.reason()};
+        if (!refreshedMetadata) {
+            return {ErrorCodes::NamespaceNotSharded,
+                    str::stream() << "Chunk move failed because collection '" << _args.getNss().ns()
+                                  << "' is no longer sharded. The migration commit error was: "
+                                  << migrationCommitStatus.toString()};
         }
+
+        if (refreshedMetadata->keyBelongsToMe(_args.getMinKey())) {
+            // The chunk modification was not applied, so report the original error
+            return {migrationCommitStatus.code(),
+                    str::stream() << "Chunk move was not successful due to "
+                                  << migrationCommitStatus.reason()};
+        }
+
+        // Migration succeeded
+        _committedMetadata = std::move(refreshedMetadata);
+
+        log() << "moveChunk updated collection '" << _args.getNss().ns()
+              << "' to collection version '" << _committedMetadata->getCollVersion() << "'.";
+    } else {
+        ScopedTransaction scopedXact(txn, MODE_IX);
+        AutoGetCollection autoColl(txn, _args.getNss(), MODE_IX, MODE_X);
+
+        CollectionShardingState::get(txn, _args.getNss())->refreshMetadata(txn, nullptr);
+
+        log() << "moveChunk failed to refresh metadata for collection '" << _args.getNss().ns()
+              << "'. Metadata was cleared so it will get a full refresh when accessed again"
+              << causedBy(redact(refreshStatus));
+
+        return {migrationCommitStatus.code(),
+                str::stream() << "Failed to refresh metadata after migration commit due to "
+                              << refreshStatus.toString()};
     }
 
     MONGO_FAIL_POINT_PAUSE_WHILE_SET(hangBeforeLeavingCriticalSection);
@@ -515,14 +484,14 @@ void MigrationSourceManager::_cleanup(OperationContext* txn) {
         css->clearMigrationSourceManager(txn);
 
         // Leave the critical section.
-        if (_state == kCriticalSection) {
+        if (_critSecSignal) {
             _critSecSignal->set();
         }
     }
 
     // Decrement the metadata op counter outside of the collection lock in order to hold it for as
     // short as possible.
-    if (_state == kCriticalSection) {
+    if (_state == kCriticalSection || _state == kCloneCompleted) {
         ShardingStateRecovery::endMetadataOp(txn);
     }
 
